# simple_bundle_adjuster

./: .gitignore  .gitmodules
simple_ba/: CMakeLists.txt
simple_ba/include/: cost_functors.h  simpleBA.h  simpleBASerialization.h
simple_ba/python/: pybind.cc
simple_ba/src/: simpleBA.cpp  testSimpleBA.cpp  test_data.json  test_data_out.json
